# MasterFilm

./: .code-review-graph.db  .gitignore  .gitmodules  .mcp.json  .windsurfrules  CMakeLists.txt  CMakeSettings.json  README.md  entities.json  mempalace.yaml
.claude/: settings.local.json
.claude/skills/: explore-codebase.md
cmake/: BundleLayout.cmake  Info.plist.in
shaders/glsl/: acutance.glsl  grain.glsl  halation_h.glsl  halation_v.glsl  tone_color.glsl
src/: MasterFilmPlugin.cpp  MasterFilmPlugin.h
src/platform/: GLSLDispatch.cpp  GLSLDispatch.h  MetalDispatch.h  MetalDispatch.mm
src/presets/: FilmPreset.cpp  FilmPreset.h  StockLibrary.cpp  StockLibrary.h
src/processors/: AcutanceProcessor.cpp  AcutanceProcessor.h  ColorProcessor.cpp  ColorProcessor.h  ColorSpaceTransform.h  FilmStockProfile.cpp  FilmStockProfile.h  GrainProcessor.cpp  GrainProcessor.h  HalationProcessor.cpp  HalationProcessor.h  ToneProcessor.cpp  ToneProcessor.h  UnifiedFilmProcessor.cpp  UnifiedFilmProcessor.h
src/ui/: LiteUI.cpp  LiteUI.h  ProUI.cpp  ProUI.h
